# jetson-ai-assistant

./: LICENSE  README.md  __main__.py  docker-compose.yml  install.sh  pyproject.toml
src/: __main__.py  camera.py
