[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jetson-ai-assistant"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
jetson-ai = "jetson_ai_assistant.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["jetson_ai_assistant"]

[tool.ruff]
line-length = 100
target-version = "py312"
